change localization file's structure

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,8 +1,9 @@
 ru:
   breadcrumbs:
-    resources:
-      root: 'Home'
+    root: 'Home'
     actions:
       new: 'New'
       show: 'Show'
       edit: 'Edit'
+    controllers:
+
