add tests on rendering breadcrumbs without index action, DRY specs

--- a/spec/dummy/config/locales/auto_breadcrumbs.en.yml
+++ b/spec/dummy/config/locales/auto_breadcrumbs.en.yml
@@ -11,3 +11,6 @@ en:
         edit: 'Settings'
         sync: 'Synchronization'
         dup: 'Duplication'
+      cities:
+        index: 'Cities / Towns'
+        show: 'Browse'
