support nested resources, close #4

--- a/spec/dummy/config/locales/auto_breadcrumbs.en.yml
+++ b/spec/dummy/config/locales/auto_breadcrumbs.en.yml
@@ -12,5 +12,5 @@ en:
         sync: 'Synchronization'
         dup: 'Duplication'
       cities:
-        index: 'Cities / Towns'
+        index: 'Cities & Towns'
         show: 'Browse'
